# CGRA408_Ray_Tracer

./: README.md
scenes/: bunny.pbrt  comp308_a3_scene.pbrt  shapes_spheres.pbrt
work/: CMakeLists.txt
work/ext/stb/: stb.c
work/src/: CMakeLists.txt  aLight.h  aShape.h  bbox.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  image.h  main.cpp  mesh.cpp  mesh.h  parser.cpp  parser.h  plane.cpp  plane.h  pointLight.cpp  pointLight.h  ray.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
